--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+  <head>
+    <title>SPAN | Sensing and Processing Across Networks at Utah</title>
+  </head>
+</html>
