--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ollie Bike Sharing</title>
-	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="main.css">
+  <title>Peter's Website</title> <!--This is what you see for the tab name-->
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
-	<h1>You're Building a Website!</h1>
-</body>
+  <body>
+    <h1>Peter's Website</h1>
+    <h3>Share Your Pedals with the World.</h3>
+    <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
+  </body>
 </html>
