Adding an icon to the tab. Adding a few items to ignore in .gitignore

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Peter's Website</title> <!--This is what you see for the tab name-->
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
 </head>
   <body>
     <h1>Peter's Website</h1>
