Adding a DOCTYPE and <html> information

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
 <head>
-  <title>Peter's Website</title> <!--This is what you see for the tab name-->
+  <title>SPAN | Sensing and Processing Across Networks at Utah</title> <!--This is what you see for the tab name-->
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
