Adding in css files.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,47 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
 <head>
   <title>SPAN | Sensing and Processing Across Networks at Utah</title> <!--This is what you see for the tab name-->
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <script type="text/javascript">
+    if (!window.jsMath) {window.jsMath = {}}
+    
+    jsMath.Easy = {
+      root: "/modules/jsmath/jsMath",
+      scale: 120,
+      autoload: 1,
+      processSlashParens: 1,
+      processSlashBrackets: 1,
+      processLaTeXenvironments: 1,
+      processDoubleDollars: 1,
+      processSingleDollars: 1,
+      fixEscapedDollars: 1,
+      doubleDollarsAreInLine: 0,
+      allowDisableTag: 0,
+      customDelimiters: ['[math]','[/math]','[display]','[/display]'],
+      allowDoubleClicks: 1,
+      showFontWarnings: 1,
+      method:  "Process",
+      loadFiles: ["extensions/AMSmath.js", "extensions/AMSsymbols.js"],
+      loadFonts: [],
+      allowGlobal: 1,
+      noImageFonts: 0
+    };
+  </script>
+  <script type="text/javascript" src="/modules/jsmath/jsMath/jsMath-easy-load.js"></script>
+
   <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?L" />
+  <link type="text/css" rel="stylesheet" media="all" href="/uploads/color/garland-3e926cc6/style.css?L" />
+  <link type="text/css" rel="stylesheet" media="print" href="/themes/garland/print.css?L" />
 </head>
+
+
   <body>
     <h1>Peter's Website</h1>
     <h3>Share Your Pedals with the World.</h3>
