--- a/index.html
+++ b/index.html
@@ -1,52 +1,76 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
-<head>
-  <title>SPAN | Sensing and Processing Across Networks at Utah</title> <!--This is what you see for the tab name-->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script type="text/javascript">
-    if (!window.jsMath) {window.jsMath = {}}
+  <head>
+    <title>SPAN | Sensing and Processing Across Networks at Utah</title> <!--This is what you see for the tab name-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script type="text/javascript">
+      if (!window.jsMath) {window.jsMath = {}}
     
-    jsMath.Easy = {
-      root: "/modules/jsmath/jsMath",
-      scale: 120,
-      autoload: 1,
-      processSlashParens: 1,
-      processSlashBrackets: 1,
-      processLaTeXenvironments: 1,
-      processDoubleDollars: 1,
-      processSingleDollars: 1,
-      fixEscapedDollars: 1,
-      doubleDollarsAreInLine: 0,
-      allowDisableTag: 0,
-      customDelimiters: ['[math]','[/math]','[display]','[/display]'],
-      allowDoubleClicks: 1,
-      showFontWarnings: 1,
-      method:  "Process",
-      loadFiles: ["extensions/AMSmath.js", "extensions/AMSsymbols.js"],
-      loadFonts: [],
-      allowGlobal: 1,
-      noImageFonts: 0
-    };
-  </script>
-  <script type="text/javascript" src="/modules/jsmath/jsMath/jsMath-easy-load.js"></script>
+      jsMath.Easy = {
+        root: "/modules/jsmath/jsMath",
+        scale: 120,
+        autoload: 1,
+        processSlashParens: 1,
+        processSlashBrackets: 1,
+        processLaTeXenvironments: 1,
+        processDoubleDollars: 1,
+        processSingleDollars: 1,
+        fixEscapedDollars: 1,
+        doubleDollarsAreInLine: 0,
+        allowDisableTag: 0,
+        customDelimiters: ['[math]','[/math]','[display]','[/display]'],
+        allowDoubleClicks: 1,
+        showFontWarnings: 1,
+        method:  "Process",
+        loadFiles: ["extensions/AMSmath.js", "extensions/AMSsymbols.js"],
+        loadFonts: [],
+        allowGlobal: 1,
+        noImageFonts: 0
+      };
+    </script>
+    <script type="text/javascript" src="/modules/jsmath/jsMath/jsMath-easy-load.js"></script>
 
-  <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?L" />
-  <link type="text/css" rel="stylesheet" media="all" href="/uploads/color/garland-3e926cc6/style.css?L" />
-  <link type="text/css" rel="stylesheet" media="print" href="/themes/garland/print.css?L" />
-</head>
+    <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?L" />
+    <link type="text/css" rel="stylesheet" media="all" href="/uploads/color/garland-3e926cc6/style.css?L" />
+    <link type="text/css" rel="stylesheet" media="print" href="/themes/garland/print.css?L" />
+  </head>
 
 
-  <body>
-    <h1>Peter's Website</h1>
-    <h3>Share Your Pedals with the World.</h3>
-    <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
+  <body class="sidebar-left">
+    <div id="header-region" class="clear-block"></div>
+    <div id="wrapper">
+      <div id="container" class="clear-block">
+	<div id="header">
+
+	  <div id="logo-floater">
+	    <h1><a href="/" title="Sensing and Processing Across Networks at Utah"><img src="/uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" /><span>Sensing and Processing Across Networks at Utah</span></a></h1>
+	  </div>
+	</div> <!-- /header -->
+
+	<div id="sidebar-left" class="sidebar">
+	  <div id="block-menu-menu-pages" class="clear-block block block-menu">
+	    <h2>Pages</h2>
+	      <div class="content">
+	        <ul class="menu">
+		<li class="leaf first">
+		  <a href="http://www.wikicfp.com/cfp/servlet/event.showlist?lownerid=2189&amp;ltype=w" title="Call for papers related to SPAN lab material.">CFP</a>
+		</li>
+		<li class="leaf">
+		  <a href="http://span.ece.utah.edu/pmwiki/pmwiki.php" title="The old span wiki website">Old SPAN site</a>
+		</li>
+		</ul>
+	      </div> <!-- content -->
+	  </div> <!-- block-menu-menu-page -->
+	</div> <!-- sidebar-left -->  
+      </div> <!-- container  -->
+    </div> <!--  wrapper -->  
   </body>
 </html>
