--- a/index.html
+++ b/index.html
@@ -45,17 +45,21 @@
 
 
   <body class="sidebar-left">
+
     <div id="header-region" class="clear-block"></div>
     <div id="wrapper">
       <div id="container" class="clear-block">
-	<div id="header">
 
+	<!-- Header -->
+	<div id="header">
 	  <div id="logo-floater">
 	    <h1><a href="/" title="Sensing and Processing Across Networks at Utah"><img src="/uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" /><span>Sensing and Processing Across Networks at Utah</span></a></h1>
 	  </div>
 	</div> <!-- /header -->
 
+	<!-- Sidebar menu -->
 	<div id="sidebar-left" class="sidebar">
+
 	  <div id="block-menu-menu-pages" class="clear-block block block-menu">
 	    <h2>Pages</h2>
 	      <div class="content">
@@ -69,6 +73,38 @@
 		</ul>
 	      </div> <!-- content -->
 	  </div> <!-- block-menu-menu-page -->
+
+	  <div id="block-menu-menu-teaching" class="clear-block block block-menu">
+            <h2>Teaching</h2>
+              <div class="content">
+	        <ul class="menu">
+		  <li class="leaf first">
+		    <a href="/3530" title="ECE 3530">ECE 3530</a>
+		  </li>
+                  <li class="collapsed">
+		    <a href="http://span.ece.utah.edu/6962" title="Applications of Fading Channels Home Page">ECE 6962</a>
+		  </li>
+                  <li class="leaf">
+		    <a href="/5520" title="ECE 5520">ECE 5520</a>
+		  </li>
+                  <li class="collapsed">
+		    <a href="/5325" title="ECE 5325/6325 Spring 2013">ECE 5325/6325</a>
+		  </li>
+                  <li class="collapsed">
+		    <a href="/5510" title="ECE 5510, Random Processes">ECE 5510</a>
+		  </li>
+                  <li class="collapsed last">
+		    <a href="/6960" title="ECE 6960: Advanced Random Processes and Applications">ECE 6960</a>
+		  </li>
+                </ul>
+	      </div> <!-- content -->
+            </div> <!-- block-menu-menu-page -->
+
+
+
+
+
+	  
 	</div> <!-- sidebar-left -->  
       </div> <!-- container  -->
     </div> <!--  wrapper -->  
