--- a/index.html
+++ b/index.html
@@ -1,112 +1,77 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
-  <head>
-    <title>SPAN | Sensing and Processing Across Networks at Utah</title> <!--This is what you see for the tab name-->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript">
-      if (!window.jsMath) {window.jsMath = {}}
-    
-      jsMath.Easy = {
-        root: "/modules/jsmath/jsMath",
-        scale: 120,
-        autoload: 1,
-        processSlashParens: 1,
-        processSlashBrackets: 1,
-        processLaTeXenvironments: 1,
-        processDoubleDollars: 1,
-        processSingleDollars: 1,
-        fixEscapedDollars: 1,
-        doubleDollarsAreInLine: 0,
-        allowDisableTag: 0,
-        customDelimiters: ['[math]','[/math]','[display]','[/display]'],
-        allowDoubleClicks: 1,
-        showFontWarnings: 1,
-        method:  "Process",
-        loadFiles: ["extensions/AMSmath.js", "extensions/AMSsymbols.js"],
-        loadFonts: [],
-        allowGlobal: 1,
-        noImageFonts: 0
-      };
-    </script>
-    <script type="text/javascript" src="/modules/jsmath/jsMath/jsMath-easy-load.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Skillfair</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
 
-    <link rel="shortcut icon" href="/uploads/garland_favicon.png" type="image/x-icon" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?L" />
-    <link type="text/css" rel="stylesheet" media="all" href="/uploads/color/garland-3e926cc6/style.css?L" />
-    <link type="text/css" rel="stylesheet" media="print" href="/themes/garland/print.css?L" />
-  </head>
-
-
-  <body class="sidebar-left">
-
-    <div id="header-region" class="clear-block"></div>
-    <div id="wrapper">
-      <div id="container" class="clear-block">
-
-	<!-- Header -->
-	<div id="header">
-	  <div id="logo-floater">
-	    <h1><a href="/" title="Sensing and Processing Across Networks at Utah"><img src="/uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" /><span>Sensing and Processing Across Networks at Utah</span></a></h1>
-	  </div>
-	</div> <!-- /header -->
-
-	<!-- Sidebar menu -->
-	<div id="sidebar-left" class="sidebar">
-
-	  <div id="block-menu-menu-pages" class="clear-block block block-menu">
-	    <h2>Pages</h2>
-	      <div class="content">
-	        <ul class="menu">
-		<li class="leaf first">
-		  <a href="http://www.wikicfp.com/cfp/servlet/event.showlist?lownerid=2189&amp;ltype=w" title="Call for papers related to SPAN lab material.">CFP</a>
-		</li>
-		<li class="leaf">
-		  <a href="http://span.ece.utah.edu/pmwiki/pmwiki.php" title="The old span wiki website">Old SPAN site</a>
-		</li>
-		</ul>
-	      </div> <!-- content -->
-	  </div> <!-- block-menu-menu-page -->
-
-	  <div id="block-menu-menu-teaching" class="clear-block block block-menu">
-            <h2>Teaching</h2>
-              <div class="content">
-	        <ul class="menu">
-		  <li class="leaf first">
-		    <a href="/3530" title="ECE 3530">ECE 3530</a>
-		  </li>
-                  <li class="collapsed">
-		    <a href="http://span.ece.utah.edu/6962" title="Applications of Fading Channels Home Page">ECE 6962</a>
-		  </li>
-                  <li class="leaf">
-		    <a href="/5520" title="ECE 5520">ECE 5520</a>
-		  </li>
-                  <li class="collapsed">
-		    <a href="/5325" title="ECE 5325/6325 Spring 2013">ECE 5325/6325</a>
-		  </li>
-                  <li class="collapsed">
-		    <a href="/5510" title="ECE 5510, Random Processes">ECE 5510</a>
-		  </li>
-                  <li class="collapsed last">
-		    <a href="/6960" title="ECE 6960: Advanced Random Processes and Applications">ECE 6960</a>
-		  </li>
-                </ul>
-	      </div> <!-- content -->
-            </div> <!-- block-menu-menu-page -->
+  <header class="container">
+    <div class="row">
+      <h1 class="col-sm-4">
+        Skillfair
+      </h1>
+      <nav class="col-sm-8 text-right">
+        <p>newest</p>
+        <p>catalouge</p>
+        <p>contact</p>
+      </nav>
+    </div>
+  </header>
+  
+  <section class="jumbotron">
+    <div class="container">
+      <div class="row text-center">
+        <h2>Homemade Goods</h2>
+        <h3>This Year's Best</h3>
+        <a class="btn btn-primary" href="#" role="button">See all</a>
+      </div>
+    </div>
+  </section>
+  
+  <section class="container">
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>kitchen</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg"/>
+      </figure>
+      <figure class="col-sm-6">
+        <p>woodwork</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/woodwork.jpg"/>
+      </figure>
+    </div>
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>gifts</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/gifts.jpg"/>
+      </figure>
+      <figure class="col-sm-6">
+        <p>antique</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/antique.jpg"/>
+      </figure>
+    </div>
+  </section>
+  
+  <footer class="container">
+    <div class="row">
+      <p class="col-sm-4">&copy; 2016 Skillfair</p>
+      <ul class="col-sm-8">
+        <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        </li>
+        <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        </li>
+        <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        </li>
+        <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </li>
+      </ul>
+    </div>
+  </footer>
 
 
 
-
-
-	  
-	</div> <!-- sidebar-left -->  
-      </div> <!-- container  -->
-    </div> <!--  wrapper -->  
-  </body>
+</body>
 </html>
