--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
     <title>SPAN | Sensing and Processing Across Networks at Utah</title>
 
     <!—- Icon you see in the tab —->
-    <link rel="shortcut icon" href="uploads/garland_favicon.png" type="image/x-icon" />
+    <link rel="icon" href="uploads/garland_favicon.png"/>
+
+    <!—- Link the CSS stylesheet —->
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
 
   <body>
     
-    <div>
-      <h1><a href="/" title="Sensing and Processing Across Networks at Utah">
-      <img src="uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" />
-      <span>Sensing and Processing Across Networks at Utah</span></a>
-      </h1>        
-    </div><!-- /header -->
+    <div class=“container”>
+
+      <div class=“banner”>
+        <h1><a href="/" title="Sensing and Processing Across Networks at Utah">
+        <img src="uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" />
+        <span>Sensing and Processing Across Networks at Utah</span></a>
+        </h1>
+        <p>Hello</p>       
+      </div><!-- banner -—>
+
+    </div><!-- container -—>
     
   </body>
 </html>
