--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <div class=“container”>
 
       <div class=“banner”>
-        <h1><a href="/" title="Sensing and Processing Across Networks at Utah">
-        <img src="uploads/garland_logo.png" alt="Sensing and Processing Across Networks at Utah" id="logo" />
-        <span>Sensing and Processing Across Networks at Utah</span></a>
-        </h1>
-        <p>Hello</p>       
+        <h1>
+          <a href="/">
+            <img src="uploads/garland_logo.png"/>
+            Sensing and Processing Across Networks at Utah
+          </a>
+        </h1>     
       </div><!-- banner -—>
 
     </div><!-- container -—>
